objects/Contract_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Service_Maintenance_Contract__r.SVMXC__Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Maintenance Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_Payroll_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adds the current Payroll tax to the usage</description>
        <label>Apply Payroll Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin_Cost_per_Unit__c</fullName>
        <label>Cost per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Pct__c</fullName>
        <formula>IF(Margin_Revenue_per_Unit__c=0,0,(Margin_Revenue_per_Unit__c - (Margin_Cost_per_Unit__c*(1+0.06)))/Margin_Revenue_per_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Revenue_per_Unit__c</fullName>
        <label>Revenue per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_Cost_per_Unit__c</fullName>
        <label>Cost per Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup_Pct__c</fullName>
        <label>Pass Through %</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Markup_Revenue_per_Unit__c</fullName>
        <formula>(Markup_Cost_per_Unit__c*Markup_Pct__c)+Markup_Cost_per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Category</label>
        <referenceTo>Pricing_Category__c</referenceTo>
        <relationshipLabel>Contract Pricing</relationshipLabel>
        <relationshipName>Contract_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Type_Text__c</fullName>
        <label>Pricing Type Text</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Account__c</fullName>
        <formula>Service_Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Pricing</relationshipLabel>
        <relationshipName>Contract_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Maintenance_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Contract Pricing</relationshipLabel>
        <relationshipName>Margin_Based_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Revenue__c</fullName>
        <label>Standard Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Maintenance_Contract__c</columns>
        <columns>Service_Contract__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Pricing</pluralLabel>
    <recordTypes>
        <fullName>Margin_Based</fullName>
        <active>true</active>
        <description>Choose this record for a Margin Based Pricing Item.</description>
        <label>Margin Based</label>
    </recordTypes>
    <recordTypes>
        <fullName>Markup_Based</fullName>
        <active>true</active>
        <description>Choose this record for a Markup Based Pricing Item.</description>
        <label>Markup Based</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>